Seccion filtrar estructurada

--- a/index.html
+++ b/index.html
@@ -17,16 +17,27 @@
         </ul>
         <ul class="lista__paginas">
           <li>
-            <a href="#"><img src="media/iconos/usuario.svg" alt="usuario" /></a>
-          </li>
-          <li>
             <a href="#"
-              ><img src="media/iconos/shop.svg" alt="carrito de compras"
+              ><img
+                src="media/iconos/usuario.svg"
+                alt="usuario"
+                class="icono__enlace"
             /></a>
           </li>
           <li>
             <a href="#"
-              ><img src="media/iconos/buscar.svg" alt="barra de busqueda"
+              ><img
+                src="media/iconos/shop.svg"
+                alt="carrito de compras"
+                class="icono__enlace"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="media/iconos/buscar.svg"
+                alt="barra de busqueda"
+                class="icono__enlace"
             /></a>
           </li>
         </ul>
@@ -52,6 +63,35 @@
               alt=""
             />
           </div>
+        </article>
+      </section>
+
+      <section class="filtrar__prendas">
+        <nav class="filtrar__navegacion">
+          <ul class="filtrar__lista">
+            <li><a href="#" class="filtrar__enlace">CAMISAS</a></li>
+            <li><a href="#" class="filtrar__enlace">PANTALONES</a></li>
+            <li><a href="#" class="filtrar__enlace">ACCESORIOS</a></li>
+            <li><a href="#" class="filtrar__enlace">SHORTS</a></li>
+          </ul>
+        </nav>
+      </section>
+
+      <section class="prendas">
+        <article class="contenedor__prendas">
+          <figure class="prenda">
+            <img
+              src="media/productos/pantalones/BLACK-whiteFRONTONLY.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>SPIDERWEB BLACK</h3>
+              <p>$639.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
         </article>
       </section>
     </main>
