Seccion prendas estructurada

--- a/index.html
+++ b/index.html
@@ -92,9 +92,139 @@
               <button class="prenda__boton">Adquirir</button>
             </figcaption>
           </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/pantalones/pantsblancos.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>WHITE LEATHER</h3>
+              <p>$639.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/front_cami_roja.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>SPIDER RED LONG</h3>
+              <p>$349.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/frontchaquetablanca.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>SPIDER RED LONG</h3>
+              <p>$139.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/poloblancafront.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>WHITE SPIDER</h3>
+              <p>$239.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/recortehoodie.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>BLACK HOODIE</h3>
+              <p>$439.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/v222_744ad199-3974-465d-bdc1-5ad31acc9246.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>BLACK & WHITE</h3>
+              <p>$139.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/camisas/frontchaquetaconjuntocosturasgrisesv2.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>JUST GRAY</h3>
+              <p>$333.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
+
+          <figure class="prenda">
+            <img
+              src="media/productos/shorts/JORTSGRISESrecorte.webp"
+              alt=""
+              class="prenda__imagen"
+            />
+
+            <figcaption class="prenda__descripcion">
+              <h3>SHORY BUX</h3>
+              <p>$500.000,00 COP</p>
+              <button class="prenda__boton">Adquirir</button>
+            </figcaption>
+          </figure>
         </article>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer__contenido">
+        <ul class="footer__lista">
+          <li><a href="#" class="footer__enlace">Terms of Service</a></li>
+          <li><a href="#" class="footer__enlace">Shipping Policy</a></li>
+          <li><a href="#" class="footer__enlace">Refund Policy</a></li>
+          <li><a href="#" class="footer__enlace">Privacy Policy</a></li>
+          <li><a href="#" class="footer__enlace">Legal Notice</a></li>
+          <li><a href="#" class="footer__enlace">Contact Information</a></li>
+        </ul>
+
+        <ul>
+          <li><h3>Newsletter</h3></li>
+          <li><p>Sign up to our newsletter to receive exclusive offers.</p></li>
+          <input type="text" placeholder="Correo Electrónico" />
+          <button>Suscribirse</button>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
