--- a/index.html
+++ b/index.html
@@ -210,19 +210,26 @@
     <footer>
       <section class="footer__contenido">
         <ul class="footer__lista">
+          <li><h3 class="footer__subtitulo">Newsletter</h3></li>
+          <li>
+            <p class="footer__descripcion">
+              Sign up to our newsletter to receive exclusive offers.
+            </p>
+          </li>
+          <input
+            type="text"
+            placeholder="Correo Electrónico"
+            class="footer__input"
+          />
+          <button class="footer__boton">Suscribirse</button>
+        </ul>
+        <ul class="footer__lista">
           <li><a href="#" class="footer__enlace">Terms of Service</a></li>
           <li><a href="#" class="footer__enlace">Shipping Policy</a></li>
           <li><a href="#" class="footer__enlace">Refund Policy</a></li>
           <li><a href="#" class="footer__enlace">Privacy Policy</a></li>
           <li><a href="#" class="footer__enlace">Legal Notice</a></li>
           <li><a href="#" class="footer__enlace">Contact Information</a></li>
-        </ul>
-
-        <ul>
-          <li><h3>Newsletter</h3></li>
-          <li><p>Sign up to our newsletter to receive exclusive offers.</p></li>
-          <input type="text" placeholder="Correo Electrónico" />
-          <button>Suscribirse</button>
         </ul>
       </section>
     </footer>
