Pagina nosotros estructurada

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Fashion</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Beauty Fashion - Nosotros</title>
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <header>
@@ -13,12 +13,8 @@
 
         <!-- Menú desktop -->
         <ul class="lista__paginas">
-          <li>
-            <a href="index.html" class="lista__enlace">INICIO</a>
-          </li>
-          <li>
-            <a href="pages/nosotros.html" class="lista__enlace">NOSOTROS</a>
-          </li>
+          <li><a href="../index.html" class="lista__enlace">INICIO</a></li>
+          <li><a href="#" class="lista__enlace">NOSOTROS</a></li>
           <li><a href="#" class="lista__enlace">CONTACTO</a></li>
           <li><a href="#" class="lista__enlace">EXCLUSIVIDAD</a></li>
         </ul>
@@ -78,11 +74,11 @@
     <div class="menu__movil" id="menuMovil">
       <div class="menu__contenido">
         <ul class="lista__paginas--movil">
-          <li><a href="index.html" class="lista__enlace--movil">INICIO</a></li>
           <li>
-            <a href="pages/nosotros.html" class="lista__enlace--movil"
-              >NOSOTROS</a
-            >
+            <a href="../index.html" class="lista__enlace--movil">INICIO</a>
+          </li>
+          <li>
+            <a href="nosotros.html" class="lista__enlace--movil">NOSOTROS</a>
           </li>
           <li><a href="#" class="lista__enlace--movil">CONTACTO</a></li>
           <li><a href="#" class="lista__enlace--movil">EXCLUSIVIDAD</a></li>
@@ -126,167 +122,73 @@
     <span class="numero__compras">1</span>
 
     <main>
-      <section class="imagenes__principal">
-        <h2 class="titulo__principal">
-          No son prendas, son un estilo de vida.
+      <section class="imagenes__principal imagenes__principal--nosotros">
+        <h2 class="titulo__principal titulo__principal--nosotros">
+          Beauty Fashion, esto somos.
         </h2>
         <article class="imagenes__contenedor">
           <div class="imagen">
             <img
-              src="media/modelos/2man1girl-shirts-black-white.webp"
-              class="imagen__principal"
-              alt=""
-            />
-          </div>
-          <div class="imagen">
-            <img
-              src="media/modelos/2mans-black-white.webp"
+              src="../media/modelos/aboutus.jpg"
               class="imagen__principal"
               alt=""
             />
           </div>
         </article>
       </section>
+      <section class="informacion__nosotros">
+        <p class="informacion__texto">
+          Beauty Fashion no es solo una marca. Es un movimiento. Es una familia.
+          Es una historia real.
+        </p>
+        <p class="informacion__texto">
+          Nacimos en Colombia en 2022, creados por un grupo de chicos de 18 años
+          desde Barranquilla, sin experiencia, sin contactos, sin apoyo… pero
+          con algo que lo cambia todo: pasión, visión y una ética de trabajo
+          salvaje.
+        </p>
+        <p class="informacion__texto">
+          Desde una habitación pequeña, con los recursos justos y mil dudas,
+          empezamos este camino con una sola idea en mente: crear algo
+          verdaderamente único. No solo ropa. No solo estética. Sino una energía
+          que se sienta cuando te vistes de Beauty.
+        </p>
 
-      <section class="filtrar__prendas">
-        <nav class="filtrar__navegacion">
-          <ul class="filtrar__lista">
-            <li><a href="#" class="filtrar__enlace">CAMISAS</a></li>
-            <li><a href="#" class="filtrar__enlace">PANTALONES</a></li>
-            <li><a href="#" class="filtrar__enlace">ACCESORIOS</a></li>
-            <li><a href="#" class="filtrar__enlace">SHORTS</a></li>
-          </ul>
-        </nav>
-      </section>
+        <h2 class="informacion__titulo">De Colombia al Mundo</h2>
 
-      <section class="prendas">
-        <article class="contenedor__prendas">
-          <figure class="prenda">
-            <img
-              src="media/productos/pantalones/BLACK-whiteFRONTONLY.webp"
-              alt=""
-              class="prenda__imagen"
-            />
+        <p class="informacion__texto">
+          Hoy, gracias a ese esfuerzo y al apoyo de nuestra comunidad, hemos
+          llevado Beauty Fashion a los cinco continentes.
+        </p>
+        <p class="informacion__texto">
+          Hemos recibido miles de pedidos desde todas partes del mundo. Cientos
+          de artistas internacionales han vestido nuestras piezas. Y lo más
+          importante: hemos creado diseños nunca antes vistos en Colombia,
+          piezas que no solo visten, sino que cuentan algo.
+        </p>
+        <p class="informacion__texto">
+          Somos de aquí, pero nuestras referencias vienen de todo el planeta.
+          Fusionamos culturas, estéticas y energía global para dar forma a una
+          marca con alma propia. Cada prenda es una declaración.
+        </p>
 
-            <figcaption class="prenda__descripcion">
-              <h3>SPIDERWEB BLACK</h3>
-              <p>$639.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
+        <h2 class="informacion__titulo">Esto va más allá de nosotros</h2>
 
-          <figure class="prenda">
-            <img
-              src="media/productos/pantalones/pantsblancos.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>WHITE LEATHER</h3>
-              <p>$639.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/front_cami_roja.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>SPIDER RED LONG</h3>
-              <p>$349.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/frontchaquetablanca.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>SPIDER RED LONG</h3>
-              <p>$139.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/poloblancafront.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>WHITE SPIDER</h3>
-              <p>$239.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/recortehoodie.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>BLACK HOODIE</h3>
-              <p>$439.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/v222_744ad199-3974-465d-bdc1-5ad31acc9246.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>BLACK & WHITE</h3>
-              <p>$139.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/camisas/frontchaquetaconjuntocosturasgrisesv2.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>JUST GRAY</h3>
-              <p>$333.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-
-          <figure class="prenda">
-            <img
-              src="media/productos/shorts/JORTSGRISESrecorte.webp"
-              alt=""
-              class="prenda__imagen"
-            />
-
-            <figcaption class="prenda__descripcion">
-              <h3>SHORY BUX</h3>
-              <p>$500.000,00 COP</p>
-              <button class="prenda__boton">Adquirir</button>
-            </figcaption>
-          </figure>
-        </article>
+        <p class="informacion__texto">
+          Beauty Fashion es disciplina. Es esfuerzo. Es no rendirse. Y esto no
+          lo decimos solo por nosotros, lo decimos por ti también.
+        </p>
+        <p class="informacion__texto">
+          Porque si nosotros, sin saber nada, sin recursos, desde una isla
+          pequeña, conseguimos llegar hasta aquí... tú también puedes con lo que
+          sea que te propongas.
+        </p>
+        <p class="informacion__texto">
+          Beauty Fashion representa a los que luchan, a los que no se conforman,
+          a los que no esperan a que las cosas pasen: las provocan. Si estás en
+          ese punto, si tú también lo sientes... Entonces ya formas parte de
+          esto. Ya eres parte de la familia
+        </p>
       </section>
     </main>
     <footer>
@@ -316,6 +218,6 @@
       </section>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
