Pagina exclusivdad estructurada

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
           <li>
             <a href="pages/nosotros.html" class="lista__enlace">NOSOTROS</a>
           </li>
-          <li><a href="#" class="lista__enlace">CONTACTO</a></li>
-          <li><a href="#" class="lista__enlace">EXCLUSIVIDAD</a></li>
+          <li>
+            <a href="pages/exclusividad.html" class="lista__enlace"
+              >EXCLUSIVIDAD</a
+            >
+          </li>
+          <li><a href="#" class="lista__enlace">CRÉDITOS</a></li>
         </ul>
 
         <ul class="lista__paginas">
@@ -84,8 +88,12 @@
               >NOSOTROS</a
             >
           </li>
-          <li><a href="#" class="lista__enlace--movil">CONTACTO</a></li>
-          <li><a href="#" class="lista__enlace--movil">EXCLUSIVIDAD</a></li>
+          <li>
+            <a href="pages/exclusividad.html" class="lista__enlace--movil"
+              >EXCLUSIVIDAD</a
+            >
+          </li>
+          <li><a href="#" class="lista__enlace--movil">CRÉDITOS</a></li>
         </ul>
 
         <div class="iconos__movil">
