--- a/pages/exclusividad.html
+++ b/pages/exclusividad.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Fashion - Nosotros</title>
+    <title>Beauty Fashion - Exclusividad</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
@@ -82,11 +82,7 @@
           <li>
             <a href="nosotros.html" class="lista__enlace--movil">NOSOTROS</a>
           </li>
-          <li>
-            <a href="exclusividad.html" class="lista__enlace--movil"
-              >EXCLUSIVIDAD</a
-            >
-          </li>
+          <li><a href="#" class="lista__enlace--movil">EXCLUSIVIDAD</a></li>
           <li><a href="#" class="lista__enlace--movil">CRÉDITOS</a></li>
         </ul>
 
@@ -130,12 +126,12 @@
     <main>
       <section class="imagenes__principal imagenes__principal--nosotros">
         <h2 class="titulo__principal titulo__principal--nosotros">
-          Beauty Fashion, esto somos.
+          Beauty Fashion, somos unicos.
         </h2>
         <article class="imagenes__contenedor">
           <div class="imagen">
             <img
-              src="../media/modelos/aboutus.jpg"
+              src="../media/famosos/TRUENO_TAG_WEB.jpg"
               class="imagen__principal"
               alt=""
             />
@@ -144,56 +140,38 @@
       </section>
       <section class="informacion__nosotros">
         <p class="informacion__texto">
-          Beauty Fashion no es solo una marca. Es un movimiento. Es una familia.
-          Es una historia real.
-        </p>
-        <p class="informacion__texto">
-          Nacimos en Colombia en 2022, creados por un grupo de chicos de 18 años
-          desde Barranquilla, sin experiencia, sin contactos, sin apoyo… pero
-          con algo que lo cambia todo: pasión, visión y una ética de trabajo
-          salvaje.
-        </p>
-        <p class="informacion__texto">
-          Desde una habitación pequeña, con los recursos justos y mil dudas,
-          empezamos este camino con una sola idea en mente: crear algo
-          verdaderamente único. No solo ropa. No solo estética. Sino una energía
-          que se sienta cuando te vistes de Beauty.
+          En Beauty Fashion, la exclusividad no es una estrategia, es nuestra
+          firma. Cada prenda que lanzamos está hecha en unidades limitadas,
+          porque anteponemos siempre la calidad y la identidad por encima de la
+          producción en masa.
         </p>
 
-        <h2 class="informacion__titulo">DE COLOMBIA AL MUNDO</h2>
+        <h2 class="informacion__titulo">NO SOMOS COMO LAS DEMÁS MARCAS</h2>
 
         <p class="informacion__texto">
-          Hoy, gracias a ese esfuerzo y al apoyo de nuestra comunidad, hemos
-          llevado Beauty Fashion a los cinco continentes.
+          Podríamos hacer tiradas enormes. Podríamos vender como todos. Pero
+          preferimos que cada prenda sea única, especial y difícil de conseguir.
         </p>
         <p class="informacion__texto">
-          Hemos recibido miles de pedidos desde todas partes del mundo. Cientos
-          de artistas internacionales han vestido nuestras piezas. Y lo más
-          importante: hemos creado diseños nunca antes vistos en Colombia,
-          piezas que no solo visten, sino que cuentan algo.
+          Porque si consigues una pieza de Beauty Fashion, puedes estar seguro
+          de que no se la verás a cualquiera por la calle
         </p>
         <p class="informacion__texto">
-          Somos de aquí, pero nuestras referencias vienen de todo el planeta.
-          Fusionamos culturas, estéticas y energía global para dar forma a una
-          marca con alma propia. Cada prenda es una declaración.
+          Todos quieren Beauty Fashion, pero solo unos pocos lo tienen. Y si ves
+          a alguien llevándolo, probablemente sea un artista internacional o
+          alguien con la misma energía, visión y determinación que nos
+          representa. Beauty Fashion no es para todos. Es para los que realmente
+          lo sienten.
         </p>
 
-        <h2 class="informacion__titulo">ESTO VA MÁS ALLÁ DE NOSOTROS</h2>
+        <h2 class="informacion__titulo">LAS PRENDAS SE AGOTAN RÁPIDO</h2>
 
         <p class="informacion__texto">
-          Beauty Fashion es disciplina. Es esfuerzo. Es no rendirse. Y esto no
-          lo decimos solo por nosotros, lo decimos por ti también.
-        </p>
-        <p class="informacion__texto">
-          Porque si nosotros, sin saber nada, sin recursos, desde una isla
-          pequeña, conseguimos llegar hasta aquí... tú también puedes con lo que
-          sea que te propongas.
-        </p>
-        <p class="informacion__texto">
-          Beauty Fashion representa a los que luchan, a los que no se conforman,
-          a los que no esperan a que las cosas pasen: las provocan. Si estás en
-          ese punto, si tú también lo sientes... Entonces ya formas parte de
-          esto. Ya eres parte de la familia
+          Cada pieza que lanzamos: Sale en cantidades limitadas. Se agota en
+          cuestión de horas o días. Y una vez agotada, no garantizamos que
+          vuelva a estar disponible jamás. Si quieres formar parte de Beauty
+          Fashion, no puedes dormirte. Porque cuando lo veas en redes, puede que
+          ya sea tarde.
         </p>
       </section>
     </main>
